Added Endpoints and vehicle Route Fix
